--- a/src/view/TextureAtlasWindow.mxml
+++ b/src/view/TextureAtlasWindow.mxml
@@ -30,7 +30,7 @@
 			
 			protected function closeHandler(event:Event):void
 			{
-				DBGATrackerManager.tracker.trackPageview("/");
+				DBGATrackerManager.trackPageview("/");
 				this.visible = false;
 			}
 			
