--- a/src/view/HelpWindow.mxml
+++ b/src/view/HelpWindow.mxml
@@ -89,6 +89,11 @@
 				navigateToURL(new URLRequest("http://dragonbones.github.io/contact_us.html"));
 			}
 			
+			protected function copyright_clickHandler(event:MouseEvent):void
+			{
+				navigateToURL(new URLRequest("http://dragonbones.github.io/about_us.html"));
+			}
+			
 		]]>
 	</fx:Script>
 	<s:TitleWindow left="20" right="20" top="20" bottom="20" title="{resourceManager.getString('resources','help')}" close="closeHandler(event)">
@@ -107,12 +112,23 @@
 			</s:NavigatorContent>
 			<s:NavigatorContent label="About" width="100%" height="100%">
 				<s:VGroup left="10" right="10" top="10" bottom="10" >
-					<s:Label width="100%" fontSize="14" fontWeight="bold"
+					<s:Label width="100%" fontSize="14" fontWeight="bold" textAlign="center"
 								 text="DragonBones V{DragonBones.VERSION} ({DragonBones.VERSION_NUMBER})"/>
-					<mx:TextArea id="aboutText" width="100%" height="100%"
+					<s:Line width="100%">
+						<s:stroke>
+							<s:SolidColorStroke color="0x000000" weight="1" caps="square"/>
+						</s:stroke>
+					</s:Line>
+					<mx:TextArea id="aboutText" width="100%" height="100%" fontSize="14"
 								 contentBackgroundAlpha="0.0" borderVisible="false" editable="false"
 								 htmlText="{_about}" />
-					<s:Label width="100%" fontSize="14" fontWeight="bold"
+					<s:Line width="100%">
+						<s:stroke>
+							<s:SolidColorStroke color="0x000000" weight="1" caps="square"/>
+						</s:stroke>
+					</s:Line>
+					<s:Label width="100%" fontSize="14" fontWeight="bold" textAlign="center"
+							 buttonMode="true" useHandCursor="true" click="copyright_clickHandler(event)"
 								 text="{resourceManager.getString('resources', 'copyright')}" />
 				</s:VGroup>
 			</s:NavigatorContent>
